Sign Up Unfinished

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red_100">#FFC91818</color>
+    <color name="red_50">#FFD26971</color>
+    <color name="blue_80">#FF3592FF</color>
 </resources>
