--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,16 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- This FrameLayout will hold the MapsFragment -->
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/map_container"
+    <fragment android:id="@+id/autocomplete_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dwello!"
-        android:layout_centerInParent="true" />
+        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+        />
+
 </RelativeLayout>
